--- a/readme
+++ b/readme
@@ -1,5 +1,8 @@
 face_detection(res10_300x300_ssd_iter_140000.caffemodel) is from: https://github.com/keyurr2/face-detection/tree/master
 
 steps:
-1. exec cmodel_train or opt_train to generate mask detection module
-2. exec detect_mask_image to test masked or without mask in img
+1. Exec. opt_train.py to generate mask detection module
+2. Exec. web/app.py
+3. Select and Uploads image which you want to detect
+4. Flask will call detect_mask_image.py to detect the image is mask or without mask 
+5. Result will show in web
